Fix sidebar layout on mobile screen size

--- a/src/main/webapp/css/mainlayout.css
+++ b/src/main/webapp/css/mainlayout.css
@@ -59,6 +59,7 @@ header {
 .main {
   margin: 0 auto;
   display: flex;
+  flex-wrap: wrap;
   margin-bottom: 2em;
   justify-content: center;
 }
@@ -200,13 +201,14 @@ footer {
   }
   .sidebar {
     margin-right: 0;
+    min-width: 100%;
   }
   .spotLight {
     order: 4;
   }
   footer {
     order: 5;
-  }
+  } 
   /* --------------------------------------------------
    top navigation styles
 -----------------------------------------------------*/
@@ -277,9 +279,6 @@ footer {
     }
     .bookNav {
         width: 20%;
-    }
-    .aside {
-        min-width: 100%;
     }
     .gallery article {
       width: 80%;
